--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 remote_theme: "miethe/gh-pages-dracula"
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
