--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -32,6 +32,7 @@ remote_theme: "dracula/gh-pages"
 plugins:
   - jekyll-feed
   - jekyll-remote-theme
+  - jekyll-seo-tag
 
 # Exclude from processing.
 # The following items will not be processed, by default.
