--- a/_config.yml
+++ b/_config.yml
@@ -20,11 +20,9 @@
 
 title: Nick Miethe
 email: miethe.dev@gmail.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "docs" # the subpath of your site, e.g. /blog
+# description: >- # this means to ignore newlines until "baseurl:"
+
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://nick.miethe.dev" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
